k8s/common/keycloak.yaml
#
# Copyright (c) 2026 Metaform Systems, Inc.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License, Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
#
# Contributors:
#      Metaform Systems, Inc. - initial API and implementation
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: mvd-common
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
        type: edc-infra
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:latest
          args:
            - "start-dev"
            - "--health-enabled=true"
            - "--import-realm"
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 9000
              name: health
          volumeMounts:
            - name: realm-config
              mountPath: /opt/keycloak/data/import
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 9000
            initialDelaySeconds: 3
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 12
          livenessProbe:
            httpGet:
              path: /health/live
              port: 9000
            initialDelaySeconds: 3
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 12
      volumes:
        - name: realm-config
          configMap:
            name: keycloak-realm
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: mvd-common
  labels:
    tier: infrastructure
spec:
  selector:
    app: keycloak
  ports:
    - port: 8080
      targetPort: 8080
      name: http
    - port: 9000
      targetPort: 9000
      name: health

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: mvd-common
spec:
  parentRefs:
    - name: common-gateway
      kind: Gateway
      sectionName: http
  hostnames:
    - keycloak.localhost
    - com-kc.mvd.test.eanadev.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: keycloak
          port: 8080
